--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
     minify:
-        runs-on: ubuntu-22.04
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
