Update action to minify loader file

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -15,7 +15,8 @@ jobs:
           node-version: 18
       - run: npm i -g terser
       - run: terser ./main.js --compress --mangle --output ./m.js
+      - run: terser ./loader.js --compress --mangle --output ./l.js
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Minify Javascript"
-          file_pattern: m.js
+          file_pattern: m.js, l.js
