Fix file pattern

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -19,4 +19,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Minify Javascript"
-          file_pattern: m.js, l.js
+          file_pattern: m.js l.js
